<resources>
    <string name="app_name">Foggy</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="show_black_fog">Show black</string>
    <string name="show_default_fog">Show normal</string>
    <string name="current_city_unknown">Unknown city</string>
    <string name="discovered_percent_default">0.000%</string>
    <string name="tracking_notification_title">Foggy tracking active</string>
    <string name="tracking_notification_text">Saving GPS points every %1$d seconds.</string>
    <string name="edit_mode_enter">Edit</string>
    <string name="edit_mode_exit">Done</string>
    <string name="edit_mode_hint">Drag to reveal</string>
    <string name="edit_mode_hint_erase">Drag to erase</string>
    <string name="erase_mode_enter">Erase</string>
    <string name="erase_mode_exit">Reveal</string>
</resources>
